Fixes spacing of credit bar

--- a/src/css/page.less
+++ b/src/css/page.less
@@ -177,7 +177,7 @@ button {
   font-size: 0.8em;
   text-align: center;
   padding: 15px;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 
   .credit {
     white-space: nowrap;
